--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <h2>Daftar Nomor Terpercaya:</h2>
     <ul>
-        <li>(ZON)085173138301</li>
-        <li></li>
-        <li></li>
+        <li>(ZON JP)085173138301</li>
+        <li>(ZON RB)085175108301</li>
+        <li>WA JP KENON MANEN</li>
     </ul>
 
     <script src="script.js"></script>
